# cc-boss

./: .gitignore  README.md  pyproject.toml
cc_boss/: __init__.py  cli.py  config.py  db.py  models.py  orchestrator.py  planner.py  progress.py  runner.py
cc_boss/web/: app.py  ws.py
cc_boss/web/static/: app.js  manifest.json  style.css
cc_boss/web/templates/: index.html  logs.html  plan.html
deploy/: cloudflared.sh  setup-node.sh
templates/: CLAUDE.md.j2
tests/: test_orchestrator.py  test_runner.py
